--- a/package.json
+++ b/package.json
@@ -7,13 +7,11 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.0",
-    "formik": "^2.2.3",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.4",
-    "styled-components": "^5.2.0",
-    "yup": "^0.29.3"
+    "styled-components": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
